Fixed the overflow in the footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,9 +8,8 @@
 footer {
     // position: absolute;
     margin-top: 15vh;
-        bottom: 0;
+    bottom: 0;
     background-color: var(--color-nav-primary);
-    width: 100vw;
     height: 10vh;
     color: var(--white-text);
 
